# sugardaddy

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
deploy/: install-server.sh  install-skill.sh
deploy/skills/sugardaddy-review/: SKILL.md  connection.env.example
docker/: .env.example  Dockerfile  docker-compose.yml
docs/plans/: insulin-awareness.md
sugardaddy/: __init__.py  __main__.py  analysis.py  backfill.py  cli.py  config.py  constants.py  db.py  ingest.py  models.py  report.py  source.py  web.py
sugardaddy/static/: common.js  desktop.js  phone.js  style.css  sw.js
sugardaddy/templates/: base.html
sugardaddy/templates/desktop/: dashboard.html
sugardaddy/templates/partials/: recent.html
sugardaddy/templates/phone/: index.html
tests/: test_report_analysis.py
