[project]
name = "sugardaddy"
version = "0.1.0"
description = "Standalone CGM + insulin + meal logger: ingests FreeStyle Libre glucose via LibreLinkUp, with phone and desktop web UIs for logging and review."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pylibrelinkup>=0.10",
    "httpx>=0.27",
]

[project.scripts]
sugardaddy = "sugardaddy.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "sugardaddy",
]

[tool.setuptools.package-data]
sugardaddy = ["templates/**/*.html", "static/**/*"]
